Add  Schema for FAQ section

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
-    <!-- Schema Markup Start -->
+    <!-- Schema Markup Local  Business -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -207,7 +207,66 @@
         "priceRange": "$$"
       }
     </script>
-    <!-- Schema Markup End -->
+
+
+    <!-- Schema Markup FAQ Section -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "Do I need any prior experience to join your martial arts classes?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Whether you're a complete beginner or have some experience in martial arts, our classes are designed to accommodate individuals of all backgrounds. Our instructors will tailor their guidance to meet your specific needs, ensuring that you receive the support necessary to improve."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Do I need to be in shape before starting a martial art?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "No, martial arts is for people of all fitness levels. Our classes are designed to accommodate beginners and gradually build strength, flexibility, and endurance over time."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What's the youngest age kids can start martial arts?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Kids can start martial arts at Golden Tiger Academy from the age of 5. We offer kids classes in Brazilian Jiu-jitsu, Kickboxing, Korean Kickboxing, and Kenpo Karate tailored to younger students, providing a fun, safe and supportive environment for learning essential skills like discipline, respect, and self-confidence. We also offer classes for teens ages 13 - 17."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What should I wear and bring to my first martial arts class?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "For your first class, just wear comfortable gym clothes. Avoid anything with zippers or metal, and take off any jewellery if you can. Make sure your fingernails and toenails are trimmed too. And don't forget to bring a water bottle to stay hydrated!"
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Do you offer private lessons / group lessons?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes, we provide one-to-one private lessons. Additionally, we offer small group sessions that can be customized for specific groups, such as women's only sessions, ensuring a comfortable and supportive environment for all participants."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Are your instructors certified and experienced?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "All our instructors hold first aid training certification and are Garda-vetted. They bring years of valuable experience to ensure safe and effective instruction for students of all levels."
+            }
+          }
+        ]
+      }
+      </script>
+
 
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
