Adding Schema Website, Schema Organization

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
-    <!-- Schema Markup Local  Business -->
+    <!-- Schema Markup LocalBusiness -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -209,7 +209,7 @@
     </script>
 
 
-    <!-- Schema Markup FAQ Section -->
+    <!-- Schema Markup FAQPage -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -266,6 +266,70 @@
         ]
       }
       </script>
+
+    <!-- Schema Markup Website -->
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "WebSite",
+          "name": "Golden Tiger Academy",
+          "url": "https://goldentigeracademy.com/"
+        }
+        </script>
+
+    <!-- Schema Markup Organization -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Golden Tiger Academy",
+        "url": "https://goldentigeracademy.com/",
+        "logo": "https://goldentigeracademy.com/apple-touch-icon.png",
+        "description": "Golden Tiger Academy offers martial arts classes in Muay Thai, Brazilian Jiu-Jitsu, Karate, Kickboxing, and Korean Kickboxing in Dunboyne, Co. Meath. Join us to improve fitness, learn self-defense, and build confidence.",
+        "foundingDate": "2008",
+        "founder": {
+          "@type": "Person",
+          "name": "Ken Byrne",
+          "description": "Ken Byrne is the Head Instructor and founder of Golden Tiger Academy, with over 38 years of martial arts experience. He holds black belts in Brazilian Jiu-Jitsu, Kickboxing, Kenpo Karate, Kantanni Karate, WonHwaDo, and Haidong Gumdo."
+        },
+        "employee": [
+          {
+            "@type": "Person",
+            "name": "Ken Byrne",
+            "jobTitle": "Head Instructor",
+            "description": "Ken Byrne has over 38 years of martial arts experience and holds black belts in multiple disciplines."
+          }
+        ],
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Unit 10, Dunboyne Business Park",
+          "addressLocality": "Dunboyne",
+          "addressRegion": "Co. Meath",
+          "postalCode": "A86 WR26",
+          "addressCountry": "IE"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 53.406,
+          "longitude": -6.475
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+353 87 233 3481",
+          "contactType": "Customer Service",
+          "areaServed": "IE",
+          "availableLanguage": "en"
+        },
+        "sameAs": [
+          "https://www.facebook.com/goldentigeracademy/",
+          "https://www.instagram.com/kengoldentiger/"
+        ]
+      }
+      </script>
+
+
+
+
 
 
     <meta charset="UTF-8" />
