--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
-    <!-- Schema Markup LocalBusiness with SportsActivityLocation -->
+ <!-- Schema Markup LocalBusiness with SportsActivityLocation -->
 <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "LocalBusiness",
+    "@type": ["LocalBusiness", "SportsActivityLocation"],
     "name": "Golden Tiger Academy",
     "image": "https://goldentigeracademy.com/apple-touch-icon.png",
     "address": {
@@ -205,7 +205,6 @@
       "Sa 09:30-14:00"
     ],
     "priceRange": "$$",
-    "@type": "SportsActivityLocation",
     "sport": ["Muay Thai", "Brazilian Jiu-Jitsu", "Karate", "Kickboxing", "Korean Kickboxing"]
   }
 </script>
