--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@
       "Th 18:00-21:00",
       "Sa 09:30-14:00"
     ],
-    "priceRange": "$$",
-    "sport": ["Muay Thai", "Brazilian Jiu-Jitsu", "Karate", "Kickboxing", "Korean Kickboxing"]
+    "priceRange": "$$"
   }
 </script>
 
