--- a/index.html
+++ b/index.html
@@ -204,7 +204,53 @@
       "Th 18:00-21:00",
       "Sa 09:30-14:00"
     ],
-    "priceRange": "$$"
+    "priceRange": "$$",
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Martial Arts Classes Offered",
+      "itemListElement": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Muay Thai",
+            "description": "Muay Thai, the 'Art of Eight Limbs,' integrates punches, kicks, elbows, and knee strikes. Known for its power and effectiveness, it builds strength and striking precision."
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Brazilian Jiu-Jitsu",
+            "description": "BJJ focuses on ground grappling and submissions. Develop self-defense skills, fitness, and mental resilience through technical groundwork. Suitable for all skill levels."
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Karate",
+            "description": "Kenpo Karate blends punches, kicks, and blocks for self-defense. Discipline, respect, and physical conditioning are core aspects, fostering personal development and martial skill."
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Kickboxing",
+            "description": "Kickboxing combines punches and kicks for a dynamic striking art. Cardiovascular fitness, agility, and strong kicks characterize this sport, promoting overall physical conditioning."
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Korean Kickboxing",
+            "description": "Korean style kickboxing is a dynamic kicking art and is influenced by various martial arts styles including Won Hwa Do, Taekwondo and kickboxing."
+          }
+        }
+      ]
+    }
   }
 </script>
 
