Adding FAQPage Schema

--- a/bjj.html
+++ b/bjj.html
@@ -175,6 +175,64 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
+    <!-- Schema FAQPage -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "What should I expect in my first BJJ class?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "In your first class, you'll focus on basic techniques and movements without sparring. It's a friendly, beginner-friendly environment where you can learn at your own pace. No prior experience or special uniform (gi) is required—just wear comfortable gym clothes."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What is the difference between gi and no-gi Brazilian Jiu-Jitsu?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Gi BJJ involves wearing a traditional uniform, allowing grips on the fabric for control. No-gi BJJ uses athletic wear like rash guards and shorts, emphasizing speed and agility without gripping fabric. Both styles are valuable and we teach both in separate classes."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Can I join BJJ classes if I’ve never trained in martial arts before?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Absolutely! Our fundamentals class is specifically designed for beginners. You'll learn the foundational techniques and principles in a safe, welcoming environment. No prior experience is required."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What are the benefits of BJJ for kids and teens?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "BJJ helps kids and teens build confidence, discipline, and fitness in a fun and supportive atmosphere. It teaches valuable self-defense skills while fostering teamwork, respect, and resilience. Classes are tailored to their age and skill level to ensure a positive experience."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How does BJJ improve self-defense skills?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "BJJ equips you with techniques to control and neutralize opponents through leverage, regardless of size or strength. It focuses on practical scenarios like defending against larger attackers, making it an effective self-defense system."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Is Brazilian Jiu-Jitsu suitable for women?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes, BJJ is excellent for women. It teaches leverage-based techniques that don’t rely on strength, making it ideal for self-defense. Our classes provide a safe and supportive environment for everyone, regardless of gender or fitness level."
+            }
+          }
+        ]
+      }
+    </script>
+
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
     <link rel="canonical" href="https://goldentigeracademy.com/bjj.html" />
