Adding FAQPage Schema

--- a/muay-thai.html
+++ b/muay-thai.html
@@ -175,6 +175,64 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
+    <!-- Schema FAQPage -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "What is Muay Thai, and how is it different from other martial arts?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Muay Thai, also known as the 'Art of Eight Limbs,' is a combat sport from Thailand that utilizes punches, kicks, elbows, knees, and clinching techniques. It’s known for its devastating strikes and clinch work, making it one of the most effective striking arts in the world, especially in MMA."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Can anyone start Muay Thai, even with no experience?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes, absolutely! Muay Thai is suitable for people of all skill levels. Whether you’re a complete beginner or have previous martial arts experience, our classes cater to everyone, starting with basic techniques and gradually progressing to more advanced drills and sparring."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What should I expect in my first Muay Thai class?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "In your first class, you’ll begin with a dynamic warm-up to get your body ready. Then, you'll dive into learning basic techniques such as punches, kicks, elbows, and knees. You’ll also practice with pads and partner drills, all in a safe and supportive environment. The focus is on learning the fundamentals while having fun."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Do I need to be in great shape to start Muay Thai?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Not at all! Muay Thai is a fantastic way to improve your fitness. While you’ll get a great workout, our classes are designed to accommodate all fitness levels. As you train, you’ll naturally build strength, cardiovascular endurance, and overall fitness."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How often should I train in Muay Thai?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "For beginners, training 1-2 times per week is ideal. This frequency will help you develop solid technique and improve your fitness over time. As you progress, you can increase the number of classes depending on your goals."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Is Muay Thai good for self-defense?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes! Muay Thai is one of the most effective striking arts for self-defense. It teaches you how to use your body’s natural weapons, including fists, elbows, knees, and legs, to defend yourself in real-life situations. Additionally, you’ll learn effective clinch work to control and neutralize opponents."
+            }
+          }
+        ]
+      }
+    </script>
+
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
     <link rel="canonical" href="https://goldentigeracademy.com/muay-thai.html" />
