Adding Schema FAQPage

--- a/karate.html
+++ b/karate.html
@@ -175,6 +175,64 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
+    <!-- Schema FAQPage -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "What is Kenpo Karate, and how is it different from other martial arts?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Kenpo Karate is a dynamic martial art blending Japanese and Chinese traditions. It emphasizes rapid strikes, fluid movement, and effective counterattacks. Unlike many martial arts, Kenpo focuses on practical self-defense techniques that can be adapted for modern-day scenarios, including MMA. Its versatility makes it stand out as a highly effective system for all skill levels."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Is Kenpo Karate suitable for beginners?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes! Kenpo Karate is designed for all experience levels, from complete beginners to advanced practitioners. Whether you're looking to learn self-defense, improve fitness, or develop discipline, our classes provide a supportive environment to help you get started."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What are the benefits of learning Kenpo Karate?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Kenpo Karate offers a wide range of benefits. It provides practical self-defense techniques for real-life situations, improves overall fitness by enhancing cardiovascular health, strength, flexibility, and coordination, and helps develop mental discipline, focus, and stress management skills. Additionally, Kenpo Karate fosters a strong sense of community, where students build friendships and encourage one another on their martial arts journey."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What should I expect in a Kenpo Karate class?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Classes begin with a warm-up to prepare your body, followed by drills focused on strikes, blocks, and movement techniques. You’ll also practice forms (katas) and engage in partner exercises or sparring, depending on your level. Each class ends with a cool-down and reflections on the techniques learned."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Is Kenpo Karate good for self-defense?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Absolutely! Kenpo Karate is designed with practicality in mind. It teaches you how to defend yourself using precise strikes, efficient counterattacks, and situational awareness. Its techniques are effective for various real-world scenarios, making it an excellent choice for self-defense."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Can children and teens learn Kenpo Karate?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes! We offer tailored classes for kids (ages 5-12) and teens (ages 13-17). These sessions focus on building confidence, discipline, and physical fitness through engaging activities and expert guidance. Classes are structured to be both educational and fun, ensuring a positive experience for younger students."
+            }
+          }
+        ]
+      }
+    </script>
+
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
     <link rel="canonical" href="https://goldentigeracademy.com/karate.html" />
