--- a/kickboxing.html
+++ b/kickboxing.html
@@ -175,6 +175,64 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
+    <!-- Schema Kickboxing FAQPage -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "What is Kickboxing, and how is it different from other martial arts?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Kickboxing is a striking-focused martial art combining powerful kicks, punches, and knee strikes into a dynamic system of offense and defense. Unlike grappling arts, kickboxing emphasizes stand-up techniques and delivers high-intensity workouts that improve strength, speed, and agility. Its unique blend of martial arts and fitness makes it ideal for both competitive sports and personal development."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Is Kickboxing suitable for beginners?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes! Kickboxing is a versatile martial art suitable for all levels, including beginners. Classes at Golden Tiger Academy are designed to gradually introduce techniques, helping newcomers build confidence and skills at their own pace."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What are the benefits of learning Kickboxing?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Kickboxing provides a comprehensive workout that improves cardiovascular health, strength, and flexibility. It also enhances mental focus, discipline, and stress management while teaching effective self-defense techniques. The supportive environment of kickboxing classes fosters camaraderie, making it a holistic experience for physical and mental wellness."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What should I expect in a Kickboxing class?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Kickboxing classes typically start with a warm-up to prepare your body for training. You’ll practice fundamental techniques such as punches, kicks, and combinations through pad work, shadowboxing, or partner drills. Classes may include sparring for advanced participants and end with a cool-down or conditioning exercises."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Is Kickboxing effective for self-defense?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes! Kickboxing equips you with practical skills for defending yourself in real-world situations. The striking techniques, combined with improved reflexes and situational awareness, make it an effective martial art for personal safety."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Can children and teens learn Kickboxing?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Absolutely! Our Wednesday kickboxing classes are specifically designed for kids and teens. With exciting games and activities, these sessions are not only fun but also help young participants develop discipline, confidence, and essential life skills under the guidance of Ken Byrne, a 3rd-degree black belt."
+            }
+          }
+        ]
+      }
+    </script>
+
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
     <link rel="canonical" href="https://goldentigeracademy.com/kickboxing.html" />
