Adding Schema FAQPage

--- a/korean-kickboxing.html
+++ b/korean-kickboxing.html
@@ -175,6 +175,64 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
+    <!-- Schema FAQPage -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "What is Korean Kickboxing?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Korean Kickboxing is a versatile martial art blending influences from Won Hwa Do, Taekwondo, and traditional kickboxing. It emphasizes fast, precise kicks and strategic footwork, making it an effective discipline for both self-defense and competitive sparring."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What makes Korean Kickboxing unique?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "The unique blend of martial arts influences gives Korean Kickboxing its distinctive focus on dynamic kicks, fluid movements, and practical techniques. It combines the power of kickboxing with the agility of Taekwondo and the adaptability of Won Hwa Do."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Is Korean Kickboxing suitable for beginners?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes! Korean Kickboxing is ideal for beginners, as classes at Golden Tiger Academy focus on building foundational skills, physical fitness, and confidence in a supportive environment."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What are the benefits of learning Korean Kickboxing?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Korean Kickboxing improves strength, cardiovascular fitness, flexibility, and coordination. It also builds mental resilience, focus, and discipline while teaching practical self-defense techniques that are applicable in real-life situations."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What should I expect in a Korean Kickboxing class?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Classes include warm-ups, drills focusing on kicks and footwork, and sparring practice for more experienced students. The sessions are designed to be engaging and challenging, catering to all experience levels."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Are the classes suitable for kids?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes! Golden Tiger Academy offers Korean Kickboxing classes for kids, focusing on fun, fitness, and skill-building. Through warm-ups, techniques, and sparring, children develop confidence, discipline, and self-defense skills."
+            }
+          }
+        ]
+      }
+    </script>
+
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
     <link rel="canonical" href="https://goldentigeracademy.com/korean-kickboxing.html" />
