Adding Schema BlogPosting

--- a/bjj-belts-explained.html
+++ b/bjj-belts-explained.html
@@ -24,6 +24,31 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
+    <!-- Schema BlogPost -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "headline": "BJJ Belts Explained: Understanding Colors and Ranks",
+        "author": {
+          "@type": "Person",
+          "name": "smgy94"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Golden Tiger Academy",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://goldentigeracademy.com/apple-touch-icon.png"
+          }
+        },
+        "datePublished": "2024-08-20",
+        "mainEntityOfPage": "https://goldentigeracademy.com/bjj-belts-explained.html",
+        "description": "A comprehensive guide to the Brazilian Jiu-Jitsu belt system, explaining the meaning behind each belt color and the process of belt promotions.",
+        "image": "https://goldentigeracademy.com/images/bjj-belt-ranks.webp"
+      }
+    </script>
+
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
     <link rel="canonical" href="https://goldentigeracademy.com/class-karate" />
