Adding Schema BlogPost

--- a/what-is-brazilian-jiu-jitsu-bjj.html
+++ b/what-is-brazilian-jiu-jitsu-bjj.html
@@ -175,6 +175,32 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
+    <!-- Schema BlogPost -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "headline": "What is Brazilian Jiu-Jitsu (BJJ)?",
+        "author": {
+          "@type": "Person",
+          "name": "smgy94"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Golden Tiger Academy",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://goldentigeracademy.com/apple-touch-icon.png"
+          }
+        },
+        "datePublished": "2024-06-28",
+        "mainEntityOfPage": "https://goldentigeracademy.com/what-is-brazilian-jiu-jitsu-bjj.html",
+        "description": "Learn about Brazilian Jiu-Jitsu (BJJ), its history, benefits, training methods, and the differences between gi and no-gi BJJ.",
+        "image": "https://goldentigeracademy.com/images/helio-gracie.webp",
+        "articleBody": "Brazilian Jiu-Jitsu (BJJ) is a martial art and combat sport that focuses on grappling and ground fighting, emphasizing the use of technique and leverage over brute strength. Originating from Japan, Jiu-Jitsu was refined and transformed into its modern form by the Gracie family in Brazil, particularly by Helio Gracie. Helio adapted traditional Jiu-Jitsu techniques to accommodate his smaller stature, creating a system where a smaller, weaker person could effectively defend themselves against a larger, stronger opponent. BJJ is renowned for its emphasis on ground fighting and submissions..."
+      }
+    </script>
+
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
     <link rel="canonical" href="https://goldentigeracademy.com/class-karate" />
