Adding Schema BlogPosting

--- a/bjj-belts-explained.html
+++ b/bjj-belts-explained.html
@@ -32,7 +32,8 @@
         "headline": "BJJ Belts Explained: Understanding Colors and Ranks",
         "author": {
           "@type": "Person",
-          "name": "smgy94"
+          "name": "Ken Byrne",
+          "url": "https://goldentigeracademy.com/#about-us"
         },
         "publisher": {
           "@type": "Organization",
