--- a/what-is-brazilian-jiu-jitsu-bjj.html
+++ b/what-is-brazilian-jiu-jitsu-bjj.html
@@ -183,7 +183,8 @@
         "headline": "What is Brazilian Jiu-Jitsu (BJJ)?",
         "author": {
           "@type": "Person",
-          "name": "smgy94"
+          "name": "Ken Byrne",
+          "url": "https://goldentigeracademy.com/#about-us"
         },
         "publisher": {
           "@type": "Organization",
