--- a/mma.html
+++ b/mma.html
@@ -175,6 +175,37 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
+    <!-- Schema BlogPost -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BlogPosting",
+        "mainEntityOfPage": {
+          "@type": "WebPage",
+          "@id": "https://goldentigeracademy.com/mma.html"
+        },
+        "headline": "MMA Near Dublin: Train Like a Fighter in Dunboyne",
+        "description": "Mixed Martial Arts (MMA) is one of the fastest-growing combat sports in Ireland. Fighters are known for their ability to blend multiple martial arts into a dynamic and explosive style. Learn how training like an MMA fighter can improve your overall fitness, conditioning, and self-defense skills.",
+        "image": "https://goldentigeracademy.com/images/gallery-6.webp",
+        "author": {
+          "@type": "Person",
+          "name": "Ken Byrne",
+          "url": "https://goldentigeracademy.com/#about-us"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Golden Tiger Academy",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://goldentigeracademy.com/apple-touch-icon.png"
+          }
+        },
+        "datePublished": "2024-09-13",
+        "dateModified": "2024-09-13",
+        "articleBody": "Mixed Martial Arts (MMA) is one of the fastest-growing combat sports in Ireland. Fighters are known for their ability to blend multiple martial arts into a dynamic and explosive style. If you're looking to train like an MMA fighter, it's important to understand the combination of striking, grappling, and conditioning that defines MMA success. Training in MMA Ireland provides you with the opportunity to develop these essential skills in a supportive environment. Training like an MMA fighter doesn’t just prepare you for competition; it transforms your overall fitness, conditioning, and self-defense skills. Whether you're an aspiring fighter or simply looking to improve your physical health, the benefits are extensive. MMA training pushes your body and mind to their limits, improving strength, endurance, flexibility, and mental toughness. In MMA, striking is just as important as grappling. Two of the most popular martial arts for striking are Muay Thai and Kickboxing. Both emphasize powerful, explosive techniques that can overwhelm opponents. Muay Thai, also known as the 'Art of Eight Limbs,' utilizes punches, kicks, knees, and elbows. Its clinch techniques are highly effective in close-quarters combat, making it a staple in MMA. Kickboxing emphasizes rapid combinations and footwork, teaching fighters how to stay agile while landing effective strikes. No MMA training is complete without mastering the ground game, and Brazilian Jiu-Jitsu (BJJ) is the gold standard when it comes to grappling. BJJ focuses on submissions, joint locks, and positional control, giving you the ability to dominate opponents on the ground. One of the reasons BJJ for MMA is so important is that fights often go to the ground. Knowing how to maintain top control, execute submissions, or escape from dangerous positions is crucial. Kenpo Karate also plays a role in MMA by emphasizing fluid movement and quick counters, keeping fighters ahead in the cage. Conditioning is another vital aspect, as it prepares fighters physically and mentally for the challenges of MMA. At Golden Tiger Academy, our classes integrate functional fitness, strength, and cardio, providing all you need to develop into a versatile MMA fighter."
+      }
+    </script>
+
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
     <link rel="canonical" href="https://goldentigeracademy.com/class-karate" />
