--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Explore martial arts excellence at Golden Tiger Academy in Dunboyne. Classes for all ages and levels, from beginners to advanced. Expert instructors guide kids, fitness enthusiasts, and self-defense seekers. Unleash your potential in a supportive environment. Elevate your fitness journey at Golden Tiger Academy Dunboyne." />
-    <title>Martial arts classes | Muay Thai | Brazilian Jiu-Jitsu (BJJ) | Karate | Kickboxing</title>
+    <title>Martial arts classes | Muay Thai | BJJ | Karate | Kickboxing</title>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
