--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Explore martial arts excellence at Golden Tiger Academy in Dunboyne. Classes for all ages and levels, from beginners to advanced. Expert instructors guide kids, fitness enthusiasts, and self-defense seekers. Unleash your potential in a supportive environment. Elevate your fitness journey at Golden Tiger Academy Dunboyne." />
+    <meta name="description" content="Start with a free trial class! Boost fitness, learn self-defense, and join a supportive, welcoming community open to all skill levels." />
     <title>Martial arts classes | Muay Thai | BJJ | Karate | Kickboxing</title>
   </head>
   <body>
