--- a/bjj.html
+++ b/bjj.html
@@ -247,7 +247,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Discover the art of Brazilian Jiu-Jitsu at Golden Tiger Academy in Dunboyne. Our expert instructors offer classes for all ages and levels, from beginners to advanced practitioners. Whether you're a kid, fitness enthusiast, or self-defense seeker, join us to unleash your potential in a supportive environment. Elevate your fitness journey at Golden Tiger Academy Dunboyne." />
-    <title>Top Brazilian Jiu-Jitsu (BJJ) Classes and Training</title>
+    <title>Brazilian Jiu-Jitsu (BJJ) Classes in Dunboyne, Meath</title>
   </head>
   <body id="class-bjj-body">
     <!-- Google Tag Manager (noscript) -->
