update hero section text

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
       <section class="hero-section-inner">
         <div class="hero-text-container">
           <h1 id="hero-header">Begin Your Martial Arts Journey at Golden Tiger Academy.</h1>
-          <p id="hero-subheader">Martial arts classes for all ages and levels, no experience required. Start your martial arts journey today with Brazilian Jiu-Jitsu, Kenpo Karate, Muay Thai, Kung Fu, and more in Dunboyne, County Meath. Boost your fitness, learn self-defense, and unleash your potential. Get in touch to arrange a free trial class.</p>
+          <p id="hero-subheader">Martial arts classes for all ages and levels, no experience required. Start your martial arts journey today with BJJ Brazilian Jiu-Jitsu, Kenpo Karate, Muay Thai, Kickboxing and more in Dunboyne, County Meath. Boost your fitness, learn self-defense, and unleash your potential. Get in touch to arrange a free trial class.</p>
           <div class="cta-container">
             <div class="cta-wrap draw-border">
               <a href="./contact-us" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
